ensemble para trastear

--- a/Practica2/Practica.ipynb
+++ b/Practica2/Practica.ipynb
@@ -418,14 +418,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "A continuación está nuestra implementación necesaria para crear un ensemble de perceptrones, el cual usaremos para evaluar los 5 datasets vistos anteriormente. Además, comentaremos los resultados y los compararemos con otra función de sklearn que permite realizar ensembles"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### **Código de la función**\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "3c3e350a-cb60-4734-abb8-6090883fad0e",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
     "\n",
     "def ensembler(X, y, name):\n",
     "    X_aux = np.copy(X)\n",
@@ -441,7 +460,7 @@
     "        #se crea un perceptron\n",
     "        clf = Perceptron(eta0=0.5, early_stopping=True, random_state=0)\n",
     "\n",
-    "        #se entrena con el dataset de errores de la iteración\n",
+    "        #se entrena con el dataset de errores de la iteración anterior\n",
     "        clf = clf.fit(X_aux, y_aux)\n",
     "\n",
     "\n",
@@ -477,7 +496,25 @@
     "        i+=+1\n",
     "        anterior = tasa\n",
     "    print(name + \":\\tscore: %0.4f (std: %0.4f)\" % (tasa, scores.std()))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### **Evaluación de los datasets con la implementación**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -522,10 +559,75 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "***\n",
+    "### **Resumen de resultados**\n",
+    "\n",
+    "\n",
+    "|dataset|Tasa de aciertos con el perceptrón|Tasa de aciertos con el ensemble|\n",
+    "|---|---|---|\n",
+    "|iris|0.6667|0.6667|\n",
+    "|wine|0.8598|0.5297|\n",
+    "|cancer|0.8947|0.7823|\n",
+    "|isolet|0.9277|0.9259|\n",
+    "|mnist|0.8688|0.8687|\n",
+    "\n",
+    "Como podemos observar, los resultados son parecidos a los obtenidos con un sólo perceptrón, exceptuando el dataset wine.\n",
+    "Para el dataset Iris, el resultado es exactamente el mismo debido a que los fallos que comete el primer perceptrón pertenecen a una única clase, asi que no es posible entrenar varios perceptrones y por tanto el ensemble consta de uno sólo e igual al perceptrón de la parte anterior. Los resultados de wine son mucho peores, probablemente porque el dataset wine es muy dependiente de la fracción de validación y del ratio de apredizaje y en esta función no se ha implementado la modificación de los parámetros de los perceptrones del ensemble. La misma lógica se puede aplicar al dataset cáncer. Los resultados de isolet y mnist son bastante más parecidos a lo esperado\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### **Evaluación de los dataset usando el ensemble de sklearn**\n",
+    "\n",
+    "En esta parte, emplearemos el Adaptive boosting de sklearn para crear ensembles con los que evaluar el dataset. Cabe destacar que una de las principales ventajas del Adaptive booster frente al nuestro es que este ensemble nos permite modificar el parámetro de la fracción de validación, por lo que se han usado los parámetros encontrados en la primera parte de la práctica y por tanto los más óptimos para cada dataset"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Import necesario para usar el Adaptive booster de sklearn"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d268504-8153-400b-95f1-db741dcbe63e",
    "metadata": {},
    "source": [
-    "## Dataset iris"
+    "#### Dataset iris"
    ]
   },
   {
@@ -554,6 +656,7 @@
     "#Crear el perceptron\n",
     "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.0250, n_jobs=-1)\n",
     "t0 = time()\n",
+    "\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -572,7 +675,7 @@
    "id": "325776ba-12bd-4c58-9f20-14e34a5e5d8f",
    "metadata": {},
    "source": [
-    "## Dataset wine"
+    "#### Dataset wine"
    ]
   },
   {
@@ -601,6 +704,7 @@
     "#Crear el perceptron\n",
     "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.4350, n_jobs=-1)\n",
     "t0 = time()\n",
+    "\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -619,7 +723,7 @@
    "id": "3a72d5f8-16ce-4de9-bc8a-7ef8c59c83f3",
    "metadata": {},
    "source": [
-    "## Dataset cancer"
+    "#### Dataset cancer"
    ]
   },
   {
@@ -648,6 +752,7 @@
     "#Crear el perceptron\n",
     "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7330, n_jobs=-1)\n",
     "t0 = time()\n",
+    "\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -666,7 +771,7 @@
    "id": "2f205dcb-b4ac-49c6-b969-d20e76c4bcc3",
    "metadata": {},
    "source": [
-    "## Dataset isolet"
+    "#### Dataset isolet"
    ]
   },
   {
@@ -695,6 +800,7 @@
     "#Crear el perceptron\n",
     "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.1300, n_jobs=-1)\n",
     "t0 = time()\n",
+    "\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -713,7 +819,7 @@
    "id": "b8ce0894-3b94-4d1a-98e9-f6db174a177a",
    "metadata": {},
    "source": [
-    "## Dataset mnist"
+    "#### Dataset mnist"
    ]
   },
   {
@@ -742,6 +848,7 @@
     "#Crear el perceptron\n",
     "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7000, n_jobs=-1)\n",
     "t0 = time()\n",
+    "\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -756,12 +863,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73e7e5f3-f6a4-466a-98d7-b82dd9e57b0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [
+    "***\n",
+    "### **Comparativa de resultados**\n",
+    "\n",
+    "|dataset|Tasa de aciertos con el ensemble implementado|Tasa de aciertos con el ensemble de sklearn|\n",
+    "|---|---|---|\n",
+    "|iris|0.6667|0.8133|\n",
+    "|wine|0.5297|0.6304|\n",
+    "|cancer|0.7823|0.8823|\n",
+    "|isolet|0.9259|0.9259|\n",
+    "|mnist|0.8687|0.8796|\n",
+    "\n",
+    "En cuanto a los resultados de la comparativa, cabe destacar que la técnica de Adaptive boosting es distinta a la vista en clase e implementada por nosotros, lo que permite evaluar con 5 perceptrones el dataset Iris, por lo que la precisión del AdaBoost es mucho mayor a la nuestra. Para los datasets de wine y cancer, el AdaBoost permite modificar la fracción de validación, por lo que obtiene mayor precisión que nuestro ensemble. En isolet y mnist, ya que los parámetros de los perceptrones no son tan influyentes y el tamaño de los datasets no limita a nuestro algoritmo a la hora de crear perceptrones, los resultados obtenidos por ambos ensembles son muy similares, siendo AdaBoost solo mejor en mnist en un 1%"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
